share toggle function added

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <body>
     <div class="container">
         <div class="card">
-            <a href="" class="drawer">
+            <div class="drawer">
                 <div class="drawer-img"></div>
-            </a>
+            </div>
             <div class="right">
 
                 <div class="heading">Shift the overall look and feel by adding these wonderful touches to furniture in your home</div>
@@ -40,7 +40,7 @@
                         </svg>
                     </div>
 
-                    <div class="share-button-active" id="shareToggle">
+                    <div class="share-button-active hidden" id="shareToggle">
                         <div class="share-button-links">
                             <p>SHARE</p>
                             <a><img src="images/icon-facebook.svg" alt=""></a>
