commit#3_made responsive

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 
                     <div class="share-button-active hidden" id="shareToggle">
                         <div class="share-button-links">
-                            <p>SHARE</p>
-                            <a><img src="images/icon-facebook.svg" alt=""></a>
-                            <a><img src="images/icon-pinterest.svg" alt=""></a>
-                            <a><img src="images/icon-twitter.svg" alt=""></a>
+                            <p class="share-item">SHARE</p>
+                            <a><img src="images/icon-facebook.svg" alt="" class="share-item"></a>
+                            <a><img src="images/icon-pinterest.svg" alt="" class="share-item"></a>
+                            <a><img src="images/icon-twitter.svg" alt="" class="share-item"></a>
 
                         </div>
                         <div class="share-button-triangle"></div>
